@@ -6,5 +6,6 @@ release_page: https://github.com/watermint/toolbox/releases/latest
 release: 107
 ---
 
-* #614 : Windows/Linux Arm64 build
+* #614 : Linux Arm64 build
 * #616 : Google Calendar command
+* #619 : Utility commands
