@@ -2878,6 +2878,16 @@
   "recipe.teamfolder.replication.title": "Replicate a team folder to the other team",
   "recipe.teamfolder.title": "Team folder management",
   "recipe.title": "Tools for Dropbox and Dropbox Business",
+  "recipe.util.archive.title": "Archive utility commands",
+  "recipe.util.archive.unzip.cli.args": "-in /LOCAL/PATH/TO/ARCHIVE.zip -out /LOCAL/PATH/TO/EXTRACT",
+  "recipe.util.archive.unzip.flag.in": "Zip archive file path",
+  "recipe.util.archive.unzip.flag.out": "Path to extract files",
+  "recipe.util.archive.unzip.title": "Extract the zip archive file",
+  "recipe.util.archive.zip.cli.args": "-out /LOCAL/PATH/TO/ARCHIVE.zip -target /LOCAL/PATH/TO/COMPRESS",
+  "recipe.util.archive.zip.flag.comment": "Comment for the zip archive",
+  "recipe.util.archive.zip.flag.out": "Zip archive file path",
+  "recipe.util.archive.zip.flag.target": "Target path to compress",
+  "recipe.util.archive.zip.title": "Compress target files into the zip archive",
   "recipe.util.date.title": "Date commands",
   "recipe.util.date.today.flag.utc": "Use UTC",
   "recipe.util.date.today.title": "Display current date",
