@@ -23,18 +23,15 @@ if [ "$?" -eq "0" ]; then
   cat $TEST_OUT | go-junit-report >$TEST_REPORT
   cp $TEST_REPORT $PWD/result.xml
   cp $TEST_REPORT $TEST_DEBUG/result.xml
-
-  if [ "$CIRCLE_BUILD_NUM"x != ""x ]; then
-    if [ $TEST_EXIT_CODE -ne 0 ]; then
-      echo TEST: Uploading logs
-      go run tbx.go dev ci artifact up -budget-memory low -local-path $TEST_DEBUG -dropbox-path /watermint-toolbox-build/test-logs/$CIRCLE_BUILD_NUM -peer-name deploy -quiet
-      go run tbx.go dev ci artifact up -budget-memory low -local-path $HOME/.toolbox/jobs -dropbox-path /watermint-toolbox-build/test-logs/$CIRCLE_BUILD_NUM -peer-name deploy -quiet
-    fi
-  fi
 fi
 
 if [ $TEST_EXIT_CODE -ne 0 ]; then
   echo Test failed: $TEST_EXIT_CODE
+  if [ "$CIRCLE_BUILD_NUM"x != ""x ]; then
+    echo TEST: Uploading logs
+    go run tbx.go dev ci artifact up -budget-memory low -local-path $TEST_DEBUG -dropbox-path /watermint-toolbox-build/test-logs/$CIRCLE_BUILD_NUM -peer-name deploy -quiet
+    go run tbx.go dev ci artifact up -budget-memory low -local-path $HOME/.toolbox/jobs -dropbox-path /watermint-toolbox-build/test-logs/$CIRCLE_BUILD_NUM -peer-name deploy -quiet
+  fi
   exit 1
 fi
 
