@@ -1,2 +1,3 @@
-* #614 : Windows/Linux Arm64 build
+* #614 : Linux Arm64 build
 * #616 : Google Calendar command
+* #619 : Utility commands
